# AegisCode

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  Makefile  README.md  aegis.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
aegiscode/: cli.py
aegiscode/audit/: chain.py  events.py
aegiscode/config/: __init__.py  loader.py  schema.py
aegiscode/credentials/: backend.py  scanner.py  store.py
aegiscode/demo/: scenarios.py  service.py
aegiscode/feedback/: classifier.py  pytest_parser.py
aegiscode/governance/: approval.py  command_lexer.py  command_rules.py  decision.py  dispatcher.py  engine.py  factory.py  path_fence.py
aegiscode/llm/: __init__.py  anthropic_adapter.py  base.py  mock.py  openai_adapter.py
aegiscode/loop/: harness.py  termination.py
aegiscode/memory/: context_builder.py  store.py
aegiscode/persistence/: db.py  repositories.py  schema.sql
aegiscode/prompt/: builder.py
aegiscode/protocol/: action.py  parser.py
aegiscode/security/: redactor.py
aegiscode/service/: api.py  app_service.py  assembly.py  demo_mode.py
aegiscode/tools/: base.py  command_tool.py  file_tools.py  finish_tool.py  registry.py  result.py  run_tests_tool.py
demos/: __init__.py  demo1_dangerous_denied.py  demo2_feedback_loop.py  demo3_approval_binding.py  demo3_symlink_escape.py  demo4_superseded.py  run_demos.py
docs/: ACCEPTANCE.md  AGENT_LOG.md  PLAN.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md
examples/demo-project/: main.py  (+1 more)
scripts/: ci_secret_scan.py  deploy_check.py  e2e_real_llm.py
tests/: helpers.py  test_ci_config.py  test_cli.py  test_deploy_check.py  test_docker_build.py  test_e2e_real_llm_offline.py  test_smoke.py
(+57 files in other folders)
