[project]
name = "aegiscode"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6",
                "pyyaml>=6.0", "keyring>=24.0", "httpx>=0.27"]
[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["aegiscode*"]
[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
