[project]
name = "aegiscode"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6",
                "pyyaml>=6.0", "keyring>=24.0", "httpx>=0.27"]
[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]
[project.scripts]
aegiscode = "aegiscode.cli:main"
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["aegiscode*"]
[tool.pytest.ini_options]
# NOTE: do NOT add `ignore::starlette.exceptions.StarletteDeprecationWarning`
# here. pytest imports the warning category eagerly at startup, and that symbol
# does not exist on every starlette release — a clean install that resolves to a
# starlette without it makes pytest crash at collection. The class is also a
# UserWarning subclass (not a DeprecationWarning), so `error::DeprecationWarning`
# never escalates it anyway; the ignore was inert. Keep filters class-portable.
filterwarnings = [
    "error::DeprecationWarning",
]
